--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </h1>
     <div class="jumbo">
       <p>
-        Můžete se stát mým <i>5.</i> klientem!
+        Můžete se stát mým <i>7.</i> klientem!
       </p>
       <p>
-        Otextováno přes 5000 produktů.
+        Otextováno přes <i>5000</i> produktů.
       </p>
       <p>
-        120 článků, reportáží a rozhovorů.
+        <i>120</i> článků, reportáží a rozhovorů.
       </p>
     </div>
   </div>
