--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span>Lidmila</span> Maršálková
     </h2>
     <h1>
-      Copywriter <span>Hlavou i srdcem</span>
+      Copywriter <span>hlavou i srdcem</span>
     </h1>
     <div class="jumbo">
       <p>
