--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       Má rodná půda se nachází v Čáslavi, nicméně s ní mám společného asi tolik jako koza s jednorožcem. Přes dvacet let jsem čistokrevným Pražákem.
     </p>
     <p>
-      Před rokem a kousek jsem se stala produktovým copywriterem v ZOOT.cz, kde denně porodím tak tisíc slov a pak odcházím spokojená domů, kde na mě čeká foťák, bowlingová koule a křeček Benedict.
+      Před rokem a kousek jsem se stala produktovým copywriterem v ZOOT.cz, kde denně porodím tak tisíc slov, a pak odcházím spokojená domů. Tam na mě čeká foťák, bowlingová koule a křeček Benedict.
     </p>
     <p>
       Potkat se můžeme v některé z pražských kaváren, kde buď mazlím kočku nebo leju kafe. Poznat mě můžete také podle sněhové vločky vytetované na levém lokti.
@@ -78,11 +78,14 @@
   <a href="http://www.bohemiagrace.cz/" target="_blank">
     <img src="images/logo-bohemia-grace.png" />
   </a>
-  <a href="http://www.fler.cz/fun-frames" target="_blank">
+  <a href="http://www.funframes.cz/" target="_blank">
     <img src="images/logo-fun-frames.jpg" />
   </a>
   <a href="http://www.monstermusic.cz/" target="_blank">
     <img src="images/logo-mm.jpg" />
+  </a>
+  <a href="http://oakconsulting.cz/" target="_blank">
+    <img src="images/logo-oak.jpg" />
   </a>
 </section>
 
