--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 
-<section id="clients" class="flex flex-center">
+<section id="clients" class="flex flex-center flex-wrap">
   <a href="http://www.zoot.cz/" target="_blank">
     <img src="images/logo-zoot.png" />
   </a>
