Illustration and heading font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Copywriter hlavou i srdcem - Lidmila Maršálková</title>
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/application.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -16,44 +17,35 @@
 
 <body>
 
-<section id="heading">
-  <div class="title">
-    <h2>
-      <span>Lidmila</span> Maršálková
-    </h2>
-    <h1>
-      Copywriter <span>hlavou i srdcem</span>
-    </h1>
+<div id="heading-container">
+  <section id="heading">
+    <div class="title">
+      <h2>
+        <span>Lidmila</span> Maršálková
+      </h2>
+      <h1>
+        <strong>Copywriter</strong> <span>hlavou i srdcem</span>
+      </h1>
+    </div>
     <div class="jumbo">
       <p>
-        Můžete se stát mým <i>7.</i> klientem!
+        Můžete se stát mým <strong>7.</strong> klientem!
       </p>
       <p>
-        Otextováno přes <i>5000</i> produktů.
+        Otextováno přes <strong>5000</strong> produktů.
       </p>
       <p>
-        <i>120</i> článků, reportáží a rozhovorů.
+        <strong>120</strong> článků, reportáží a rozhovorů.
       </p>
     </div>
-  </div>
-  <div class="about">
-    <p>
-      Má rodná půda se nachází v Čáslavi, nicméně s ní mám společného asi tolik jako koza s jednorožcem. Přes dvacet let jsem čistokrevným Pražákem.
-    </p>
-    <p>
-      Před rokem a kousek jsem se stala produktovým copywriterem v ZOOT.cz, kde denně porodím tak tisíc slov, a pak odcházím spokojená domů. Tam na mě čeká foťák, bowlingová koule a křeček Benedict.
-    </p>
-    <p>
-      Potkat se můžeme v některé z pražských kaváren, kde buď mazlím kočku nebo leju kafe. Poznat mě můžete také podle sněhové vločky vytetované na levém lokti.
-    </p>
-  </div>
-</section>
-
+  </section>
+  <img src="/images/liduska.svg" id="drawing" />
+</div>
 <div class="content-panel">
   <section class="flex flex-center">
     <div>
       <p>
-        Opravdu! Ne všichni mají ze slovní vyřídilky za jedna. Někdo zkrátka chrlí jednu skvělou myšlenku za druhou, ale už jí není schopen "obléknout" ta správná slova.
+        Opravdu! Ne všichni mají ze slovní vyřídilky za jedna. Někdo zkrátka chrlí jednu skvělou myšlenku za druhou, ale už jí není schopen „obléknout” ta správná slova.
       </p>
       <p>
         A proto tu jsem. Představím vás, i to co děláte světu se stejnou láskou a nadšením, jaké do stvoření nápadu dáváte. Do textu vkládám emoce, upřímnost a srozumitelnost.
@@ -63,10 +55,8 @@
       </p>
     </div>
     <div>
-      <h2>COPYhrátky i něco víc</h2>
-      <em>
-        Jsem tu pro vás ať už bude vaším snem trefný slogan, přiblížení vašich služeb zákazníkům nebo sladká báseň pro vaši lásku.
-      </em>
+      <h2>Copyhrátky i něco víc</h2>
+      Jsem tu pro vás ať už bude vaším snem trefný slogan, přiblížení vašich služeb zákazníkům nebo sladká báseň pro vaši lásku.
       <p class="hire-me">
         <a href="#contact">Chci s Vámi pracovat!</a>
       </p>
@@ -97,7 +87,7 @@
   <section class="flex flex-center">
     <div>
       <h2>Doplňkové služby</h2>
-      <em>Zabijte dvě mouchy jednou ranou! Zkraťte si čas věnovaný hledání.</em>
+      Zabijte dvě mouchy jednou ranou! Zkraťte si čas věnovaný hledání.
     </div>
     <div>
       <p>
@@ -124,8 +114,10 @@
 </section>
 
 <div class="content-panel">
-  <section id="contact" class="flex flex-space-between">
-    <div>
+  <section id="contact">
+    <div class="contacts">
+      <h2>Spojme síly!</h2>
+      <p>Přeskočila jiskra? Pokud myslíte, že by nám slušela spolupráce, ozvěte se!</p>
       <p class="flex">
         <img src="images/icon-mail.png" />
         lidmilamarsalkova@gmail.com
@@ -139,9 +131,17 @@
         lmarsalkova
       </p>
     </div>
-    <div>
-      <h2>Spojme síly!</h2>
-      <em>Přeskočila jiskra? Pokud myslíte, že by nám slušela spolupráce, ozvěte se!</em>
+    <div class="about">
+      <h2>Kdo jsem</h2>
+      <p>
+        Má rodná půda se nachází v Čáslavi, nicméně s ní mám společného asi tolik jako koza s jednorožcem. Přes dvacet let jsem čistokrevným Pražákem.
+      </p>
+      <p>
+        Před rokem a kousek jsem se stala produktovým copywriterem v ZOOT.cz, kde denně porodím tak tisíc slov, a pak odcházím spokojená domů. Tam na mě čeká foťák, bowlingová koule a křeček Benedict.
+      </p>
+      <p>
+        Potkat se můžeme v některé z pražských kaváren, kde buď mazlím kočku nebo leju kafe. Poznat mě můžete také podle sněhové vločky vytetované na levém lokti.
+      </p>
     </div>
   </section>
 </div>
