--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Můžete se stát mým <strong>7.</strong> klientem!
       </p>
       <p>
-        Otextováno přes <strong>5000</strong> produktů.
+        Otextováno přes <strong>5000</strong> produktů,
       </p>
       <p>
         <strong>120</strong> článků, reportáží a rozhovorů.
@@ -44,21 +44,20 @@
 <div class="content-panel">
   <section class="flex flex-center">
     <div>
+      <h2>COPYHRÁTKY</h2>
       <p>
-        Opravdu! Ne všichni mají ze slovní vyřídilky za jedna. Někdo zkrátka chrlí jednu skvělou myšlenku za druhou, ale už jí není schopen „obléknout” ta správná slova.
+        Má copywriterská historie zahrnuje nejen zkušenosti produktového copywritera v ZOOT.cz, ale také intenzivní spolupráci s on-line hudebním magazínem (redaktorka a fotografka) či individuálním poradenstvím zaměřeným na tvorbu poutavých CV a motivačních dopisů (Naučmese.cz).
       </p>
       <p>
-        A proto tu jsem. Představím vás, i to co děláte světu se stejnou láskou a nadšením, jaké do stvoření nápadu dáváte. Do textu vkládám emoce, upřímnost a srozumitelnost.
-      </p>
-      <p>
-        Ukázku toho, co mám za sebou, vám pošlu bez zbytečných řečí e-mailem.
+        Ukázku toho, co mám za sebou, vám pošlu bez zbytečných řečí e&#8209;mailem.
       </p>
     </div>
     <div>
-      <h2>Copyhrátky i něco víc</h2>
-      Jsem tu pro vás ať už bude vaším snem trefný slogan, přiblížení vašich služeb zákazníkům nebo sladká báseň pro vaši lásku.
+      <p>
+       Neváhejte se na mě obrátit, ať už si budete lámat hlavu s trefným sloganem, textací webu či sladkou básní pro vaši lásku. Má klávesnice a já jsme připraveni zasáhnout vaši cílovou skupinu. Do textu vkládám emoce, upřímnost a srozumitelnost s níž získáte větší šanci uspět.
+      </p>
       <p class="hire-me">
-        <a href="#contact">Chci s Vámi pracovat!</a>
+        <a href="#contact">Chci Vás oslovit!</a>
       </p>
     </div>
   </section>
@@ -86,7 +85,7 @@
 <div class="content-panel">
   <section class="flex flex-center">
     <div>
-      <h2>Doplňkové služby</h2>
+      <h2>A CO JEŠTĚ?</h2>
       Zabijte dvě mouchy jednou ranou! Zkraťte si čas věnovaný hledání.
     </div>
     <div>
@@ -97,7 +96,7 @@
         V hledáčku mám převážně lidské a zvířecí tvory, produkty a společenské události. Navštívit mě můžete buď v pronajatém fotoateliéru nebo se setkáme, kde bude třeba.
       </p>
       <p>
-        Navíc. Spojíme-li tvorbu textového obsahu a fotografické služby, můžeme si všimnout zajímavého jevu, lidově nazvaného Sleva.
+        Pokud ode mě zrovna nepotřebujete nic napsat, nevadí. Obě služby jsou na sobě nezávislé.
       </p>
     </div>
   </section>
@@ -117,7 +116,7 @@
   <section id="contact">
     <div class="contacts">
       <h2>Spojme síly!</h2>
-      <p>Přeskočila jiskra? Pokud myslíte, že by nám slušela spolupráce, ozvěte se!</p>
+      <p>Přeskočila jiskra? Pojďme se nezávazně potkat. S trochou štěstí mě můžete najít každé pondělí a čtvrtek v Impact Hub Praha. Další způsoby, jak mě kontaktovat najdete tady:</p>
       <p class="flex">
         <img src="images/icon-mail.png" />
         lidmilamarsalkova@gmail.com
@@ -134,13 +133,13 @@
     <div class="about">
       <h2>Kdo jsem</h2>
       <p>
-        Má rodná půda se nachází v Čáslavi, nicméně s ní mám společného asi tolik jako koza s jednorožcem. Přes dvacet let jsem čistokrevným Pražákem.
+        Má rodná půda se nachází v Čáslavi, ale mám s ní společného asi tolik jako koza s jednorožcem. Přes dvacet let jsem čistokrevnou Pražačkou.
       </p>
       <p>
-        Před rokem a kousek jsem se stala produktovým copywriterem v ZOOT.cz, kde denně porodím tak tisíc slov, a pak odcházím spokojená domů. Tam na mě čeká foťák, bowlingová koule a křeček Benedict.
+        V nedávné době jsem se odvážila opustit firemní pohodlí s myšlenkou, že chci rozdávat čtivý, upřímný a kvalitní textový obsah více než jedné firmě. Když se zrovna nevěnuji psaní, svírám v rukách fotoaparát, bowlingovou kouli nebo svého křečka Benedicta.
       </p>
       <p>
-        Potkat se můžeme v některé z pražských kaváren, kde buď mazlím kočku nebo leju kafe. Poznat mě můžete také podle sněhové vločky vytetované na levém lokti.
+        Potkat se můžeme v některé z pražských kaváren, kde buď mazlím kočku nebo leju kafe. Poznáte mě mimo jiné podle vytetované sněhové vločky na levém lokti.
       </p>
     </div>
   </section>
