Visible footer content

--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@
         <div class="footer-secondary-links">
             <ul>
                 <li>Vytvořil <a href="http://rousek.name/">Josef Rousek</a></li>
+                <li>Ilustrace Anna Kočová, Agata Kuczminska a freepik.com</li>
             </ul>
         </div>
         <div class="footer-logo">
+          <ul>
+            <li>Copyright 2016 Lidmila Maršálková</li>
+          </ul>
         </div>
     </div>
 </footer>
