New funframes logo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <img src="images/logo-bohemia-grace.png" />
   </a>
   <a href="http://www.funframes.cz/" target="_blank">
-    <img src="images/logo-fun-frames.jpg" />
+    <img src="images/logo-fun-frames.png" />
   </a>
   <a href="http://www.monstermusic.cz/" target="_blank">
     <img src="images/logo-mm.jpg" />
