--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
     <li><a class="fancybox" rel="group" href="images/photos/DSC_0189.jpg"><img src="images/photos/DSC_0189.jpg" /></a></li>
     <li><a class="fancybox" rel="group" href="images/photos/cat.jpg"><img src="images/photos/cat.jpg" /></a></li>
     <li><a class="fancybox" rel="group" href="images/photos/DSC_0261.jpg"><img src="images/photos/DSC_0261.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_0019.jpg"><img src="images/photos/DSC_0019.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_0092.jpg"><img src="images/photos/DSC_0092.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_0495.jpg"><img src="images/photos/DSC_0495.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_1172.jpg"><img src="images/photos/DSC_1172.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_1343.jpg"><img src="images/photos/DSC_1343.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_1451.jpg"><img src="images/photos/DSC_1451.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/DSC_2160.jpg"><img src="images/photos/DSC_2160.jpg" /></a></li>
+    <li><a class="fancybox" rel="group" href="images/photos/london.jpg"><img src="images/photos/london.jpg" /></a></li>
   </ul>
 </section>
 
