New icons in contact section

--- a/index.html
+++ b/index.html
@@ -133,9 +133,17 @@
         <img src="images/icon-phone.png" />
         739 209 182
       </p>
-      <p class="flex">
-        <img src="images/icon-linkedin.png" />
-        lmarsalkova
+      <p>
+        <a href="https://www.linkedin.com/in/lmarsalkova" target="_blank" class="flex">
+          <img src="images/icon-linkedin.png" />
+          lmarsalkova
+        </a>
+      </p>
+      <p>
+        <a href="https://www.facebook.com/copywriterlidmila" target="_blank" class="flex">
+          <img src="images/icon-facebook.png" />
+          copywriterlidmila
+        </a>
       </p>
     </div>
     <div class="about">
