--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Copywriter hlavou i srdcem - Lidmila Maršálková</title>
+    <meta name="description" content="Copywriter hlavou i srdcem. Stvořím pro vás texty s emocemi, upřímností a nadšením, která se přenesou i na vaše zákazníky.">
+    <meta name="keywords" content="copywriter, fotograf, texty, články">
+    <meta name="author" content="Josef Rousek">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://lidmila.cz/images/liduska.png" />
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
