New client logos

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
   <a href="http://oakconsulting.cz/" target="_blank">
     <img src="images/logo-oak.jpg" />
   </a>
+  <a href="http://autofisera.cz/" target="_blank">
+    <img src="images/logo-autofisera.png" />
+  </a>
+  <a href="https://virgla.com/cz/" target="_blank">
+    <img src="images/logo-virgla.png" />
+  </a>
 </section>
 
 <div class="content-panel">
