--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div>
       <h2>COPYHRÁTKY</h2>
       <p>
-        Má copywriterská historie zahrnuje nejen zkušenosti produktového copywritera v ZOOT.cz, ale také intenzivní spolupráci s on-line hudebním magazínem (redaktorka a fotografka) či individuálním poradenstvím zaměřeným na tvorbu poutavých CV a motivačních dopisů (Naučmese.cz).
+        Má copywriterská historie zahrnuje nejen zkušenosti produktového copywritera v ZOOT.cz, ale také intenzivní spolupráci s on-line hudebním magazínem (redaktorka a fotografka) a také individuální poradenství zaměřené na tvorbu poutavých CV a motivačních dopisů (Naučmese.cz).
       </p>
       <p>
         Ukázku toho, co mám za sebou, vám pošlu bez zbytečných řečí e&#8209;mailem.
