Změny: index, logo, texty

--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
     </div>
     <div class="jumbo">
       <p>
-        Můžete se stát mým <strong>7.</strong> klientem!
+        Společně najdeme ta správná slova, která
       </p>
       <p>
-        Otextováno přes <strong>5000</strong> produktů,
-      </p>
-      <p>
-        <strong>120</strong> článků, reportáží a rozhovorů.
+        Vás propojí s těmi správnými lidmi.
       </p>
     </div>
   </section>
@@ -49,87 +46,82 @@
 <div class="content-panel">
   <section class="flex flex-center">
     <div>
-      <h2>COPYHRÁTKY</h2>
-      <p>
-        Má copywriterská historie zahrnuje nejen zkušenosti produktového copywritera v ZOOT.cz, ale také intenzivní spolupráci s on-line hudebním magazínem (redaktorka a fotografka) a také individuální poradenství zaměřené na tvorbu poutavých CV a motivačních dopisů (Naučmese.cz).
-      </p>
-      <p>
-        Ukázku toho, co mám za sebou, vám pošlu bez zbytečných řečí e&#8209;mailem.
-      </p>
+      <h2>JSEM TU PRO VÁS, POKUD POTŘEBUJETE</h2>
+      <ul>
+        <li>Obsah na web nebo sociální sítě</li>
+        <li>Copy facelift pro web</li>
+        <li>Otextovat produkty</li>
+      </ul>
     </div>
     <div>
-      <p>
-       Neváhejte se na mě obrátit, ať už si budete lámat hlavu s trefným sloganem, textací webu či sladkou básní pro vaši lásku. Má klávesnice a já jsme připraveni zasáhnout vaši cílovou skupinu. Do textu vkládám emoce, upřímnost a srozumitelnost s níž získáte větší šanci uspět.
-      </p>
-      <p class="hire-me">
-        <a href="#contact">Chci Vás oslovit!</a>
-      </p>
+      <ul>
+        <li>Udělat krásnější newslettery</li>
+        <li>Oslovit e-mailem, motivačním dopisem...</li>
+        <li>Povídat si, konzultovat, vysvětlit</li>
+      </ul>
     </div>
   </section>
 </div>
 
 
 <section id="clients" class="flex flex-center flex-wrap">
-  <a href="http://www.zoot.cz/" target="_blank">
+  <div class="flex flex-items-marg-1">
+    <img src="images/florea-logo.png" />
+    <p>Stále probíhající spolupráce. Pro online květinářství tvořím zábavné i informačně hodnotné články, newslettery, reklamní texty i nabídky na slevové portály.</p>
+  </div>
+  <div class="flex flex-items-marg-1">
+    <p>Stále probíhající spolupráce na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+    <img src="images/proudly-logo.png" />
+  </div>
+  <div class="flex flex-items-marg-1">
+    <img src="images/hrady-jicin.png" />
+    <p>Stále probíhající spolupráce na tvorbě obsahu na web a sociální sítě.</p>
+  </div>
+  <div class="flex flex-items-marg-1">
+    <p>Pro ZOOT jsem otextovala více než 3 000 produktů. Každá značka prodávaná na e-shopu měla vlastní styl komunikace se zákazníkem, což bylo třeba při popisování produktů zohlednit.</p>
     <img src="images/logo-zoot.png" />
-  </a>
-  <a href="http://www.bohemiagrace.cz/" target="_blank">
-    <img src="images/logo-bohemia-grace.png" />
-  </a>
-  <a href="http://www.funframes.cz/" target="_blank">
+  </div>
+  <div class="flex flex-items-marg-1">
     <img src="images/logo-fun-frames.png" />
-  </a>
-  <a href="http://www.monstermusic.cz/" target="_blank">
-    <img src="images/logo-mm.jpg" />
-  </a>
-  <a href="http://oakconsulting.cz/" target="_blank">
-    <img src="images/logo-oak.jpg" />
-  </a>
-  <a href="http://autofisera.cz/" target="_blank">
+    <p>Pro e-shop s ručně vyráběnými rámečky jsem napsala veškeré texty na web včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+  </div>
+  <div class="flex flex-items-marg-1">
+    <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout textu i celému webu nový život.</p>
     <img src="images/logo-autofisera.png" />
-  </a>
-  <a href="https://virgla.com/cz/" target="_blank">
-    <img src="images/logo-virgla.png" />
-  </a>
+  </div>
 </section>
 
 <div class="content-panel">
   <section class="flex flex-center">
     <div>
-      <h2>A CO JEŠTĚ?</h2>
-      Zabijte dvě mouchy jednou ranou! Zkraťte si čas věnovaný hledání.
+      <h2>BUDE NÁM TO KLAPAT?</h2>
     </div>
     <div>
-      <p>
-        Fotografování je činnost, která v mém případě silně konkuruje psaní. Že se zrovna trápíte s hledáním ideálního fotografa? Tady jsem!
-      </p>
-      <p>
-        V hledáčku mám převážně lidské a zvířecí tvory, produkty a společenské události. Navštívit mě můžete buď v pronajatém fotoateliéru nebo se setkáme, kde bude třeba.
-      </p>
-      <p>
-        Pokud ode mě zrovna nepotřebujete nic napsat, nevadí. Obě služby jsou na sobě nezávislé.
-      </p>
+      <ul>
+        <li>Oboustranná důvěra v to děláme</li>
+        <li>SEO je pomocník, ne řešení všeho</li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li>Umět zajít do nekonečna a ještě dál</li>
+        <li>Komunikace je klíčem k úspěchu</li>
+      </ul>
     </div>
   </section>
 </div>
 
-<section id="photos">
-  <ul>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_1403.jpg"><img src="images/photos/DSC_1403.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0712.jpg"><img src="images/photos/DSC_0712.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0189.jpg"><img src="images/photos/DSC_0189.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/cat.jpg"><img src="images/photos/cat.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0261.jpg"><img src="images/photos/DSC_0261.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0019.jpg"><img src="images/photos/DSC_0019.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0092.jpg"><img src="images/photos/DSC_0092.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_0495.jpg"><img src="images/photos/DSC_0495.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_1172.jpg"><img src="images/photos/DSC_1172.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_1343.jpg"><img src="images/photos/DSC_1343.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_1451.jpg"><img src="images/photos/DSC_1451.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/DSC_2160.jpg"><img src="images/photos/DSC_2160.jpg" /></a></li>
-    <li><a class="fancybox" rel="group" href="images/photos/london.jpg"><img src="images/photos/london.jpg" /></a></li>
-  </ul>
-</section>
+  <section class="flex flex-center flex-items-pad-1">
+    <div>
+      <h2>LIDMILA</h2>
+    </div>
+    <div>
+    Copywriterka, redaktorka, fotografka. Ke všem třem činnostem jsem přičuchla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nepíšu, cítím nepříjemnou závrať a třas v pravé ruce.
+    </div>
+    <div>
+    Nedostatek psaní si kompenzuju závodním hraním bowlingu, cestováním, focením, vařením a chozením po kavárnách nebo vinárnách. Doma na mě čeká kromě přítele-programátora také křeček syrský jménem Benedict.
+    </div>
+  </section>
 
 <div class="content-panel">
   <section id="contact">
