--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <div class="content-panel">
   <section id="contact">
-    <div class="contacts">
+    <div class="contacts flex flex-center">
       <p class="flex">
         <img src="images/icon-mail.png" />
         lidmilamarsalkova@gmail.com
