--- a/index.html
+++ b/index.html
@@ -44,68 +44,65 @@
   <img src="/images/liduska.svg" id="drawing" />
 </div>
 <div class="content-panel">
-  <section class="flex flex-center">
-    <div>
-      <h2>JSEM TU PRO VÁS, POKUD POTŘEBUJETE</h2>
-      <ul>
-        <li>Obsah na web nebo sociální sítě</li>
-        <li>Copy facelift pro web</li>
-        <li>Otextovat produkty</li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li>Udělat krásnější newslettery</li>
-        <li>Oslovit e-mailem, motivačním dopisem...</li>
-        <li>Povídat si, konzultovat, vysvětlit</li>
-      </ul>
-    </div>
+
+  <section class="panels">
+    <h2>JSEM TU PRO VÁS, POKUD POTŘEBUJETE</h2>
+    <ul class="flex flex-center">
+      <li class="flex flex-center">Obsah na web nebo sociální sítě</li>
+      <li class="flex flex-center">Copy facelift pro web</li>
+      <li class="flex flex-center">Otextovat produkty</li>
+    </ul>
+    <ul class="flex flex-center">
+      <li class="flex flex-center">Udělat krásnější newslettery</li>
+      <li class="flex flex-center">Oslovit e-mailem, motivačním dopisem...</li>
+      <li class="flex flex-center">Povídat si, konzultovat, vysvětlit</li>
+    </ul>
   </section>
 </div>
 
 
-<section id="clients" class="flex flex-center flex-wrap">
-  <div class="flex flex-items-marg-1">
-    <img src="images/florea-logo.png" />
-    <p>Stále probíhající spolupráce. Pro online květinářství tvořím zábavné i informačně hodnotné články, newslettery, reklamní texty i nabídky na slevové portály.</p>
+<section id="clients">
+  <div class="row">
+    <div class="col">
+      <img src="images/florea-logo.png" />
+      <p>Stále probíhající spolupráce. Pro online květinářství tvořím zábavné i informačně hodnotné články, newslettery, reklamní texty i nabídky na slevové portály.</p>
+    </div>
+    <div class="col">
+      <img src="images/proudly-logo.png" />
+      <p>Stále probíhající spolupráce na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+    </div>
+    <div class="col">
+      <img src="images/hrady-jicin.png" />
+      <p>Stále probíhající spolupráce na tvorbě obsahu na web a sociální sítě.</p>
+    </div>
   </div>
-  <div class="flex flex-items-marg-1">
-    <p>Stále probíhající spolupráce na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
-    <img src="images/proudly-logo.png" />
-  </div>
-  <div class="flex flex-items-marg-1">
-    <img src="images/hrady-jicin.png" />
-    <p>Stále probíhající spolupráce na tvorbě obsahu na web a sociální sítě.</p>
-  </div>
-  <div class="flex flex-items-marg-1">
-    <p>Pro ZOOT jsem otextovala více než 3 000 produktů. Každá značka prodávaná na e-shopu měla vlastní styl komunikace se zákazníkem, což bylo třeba při popisování produktů zohlednit.</p>
-    <img src="images/logo-zoot.png" />
-  </div>
-  <div class="flex flex-items-marg-1">
-    <img src="images/logo-fun-frames.png" />
-    <p>Pro e-shop s ručně vyráběnými rámečky jsem napsala veškeré texty na web včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
-  </div>
-  <div class="flex flex-items-marg-1">
-    <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout textu i celému webu nový život.</p>
-    <img src="images/logo-autofisera.png" />
+  <div class="row">
+    <div class="col">
+      <img src="images/logo-zoot.png" />
+      <p>Pro ZOOT jsem otextovala více než 3 000 produktů. Každá značka prodávaná na e-shopu měla vlastní styl komunikace se zákazníkem, což bylo třeba při popisování produktů zohlednit.</p>
+    </div>
+    <div class="col">
+      <img src="images/logo-fun-frames.png" />
+      <p>Pro e-shop s ručně vyráběnými rámečky jsem napsala veškeré texty na web včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+    </div>
+    <div class="col">
+      <img src="images/logo-autofisera.png" />
+      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout textu i celému webu nový život.</p>
+    </div>
   </div>
 </section>
 
 <div class="content-panel">
-  <section class="flex flex-center">
-    <div>
-      <h2>BUDE NÁM TO KLAPAT?</h2>
-    </div>
-    <div>
-      <ul>
-        <li>Oboustranná důvěra v to děláme</li>
-        <li>SEO je pomocník, ne řešení všeho</li>
+  <section>
+    <h2>BUDE NÁM TO KLAPAT?</h2>
+    <div class="panels">
+      <ul class="flex flex-center">
+        <li class="flex flex-center">Oboustranná důvěra v to děláme</li>
+        <li class="flex flex-center">SEO je pomocník, ne řešení všeho</li>
       </ul>
-    </div>
-    <div>
-      <ul>
-        <li>Umět zajít do nekonečna a ještě dál</li>
-        <li>Komunikace je klíčem k úspěchu</li>
+      <ul class="flex flex-center">
+        <li class="flex flex-center">Umět zajít do nekonečna a ještě dál</li>
+        <li class="flex flex-center">Komunikace je klíčem k úspěchu</li>
       </ul>
     </div>
   </section>
