--- a/index.html
+++ b/index.html
@@ -32,30 +32,38 @@
         <strong>Copywriter</strong> <span>hlavou i srdcem</span>
       </h1>
     </div>
-    <div class="jumbo">
-      <p>
-        Společně najdeme ta správná slova, která
-      </p>
-      <p>
-        Vás propojí s těmi správnými lidmi.
-      </p>
-    </div>
   </section>
-  <img src="/images/liduska.svg" id="drawing" />
+  <img src="/images/lidmila.svg" id="drawing" />
+  <div class="content-panel">
+  <div class="jumbo">
+    <p>
+      Společně najdeme ta správná slova, která
+    </p>
+    <p>
+      Vás propojí s těmi správnými lidmi.
+    </p>
+  </div>
 </div>
-<div class="content-panel">
+</div>
 
+<div>
   <section class="panels">
     <h2>JSEM TU PRO VÁS, POKUD POTŘEBUJETE</h2>
     <ul class="flex flex-center">
-      <li class="flex flex-center">Obsah na web nebo sociální sítě</li>
-      <li class="flex flex-center">Copy facelift pro web</li>
-      <li class="flex flex-center">Otextovat produkty</li>
+      <li class="flex flex-center">Obsah na web
+      <br>nebo sociální sítě</li>
+      <li class="flex flex-center">Copy facelift
+      <br>Vašich stránek</li>
+      <li class="flex flex-center">Otextovat
+        <br>produkty</li>
     </ul>
     <ul class="flex flex-center">
-      <li class="flex flex-center">Udělat krásnější newslettery</li>
-      <li class="flex flex-center">Oslovit e-mailem, motivačním dopisem...</li>
-      <li class="flex flex-center">Povídat si, konzultovat, vysvětlit</li>
+      <li class="flex flex-center">Napsat klikatelné
+      <br>newslettery</li>
+      <li class="flex flex-center">Oslnit mailem, životopisem,
+      <br>medailonkem...</li>
+      <li class="flex flex-center">Povídat si, konzultovat,
+      <br>vysvětlit</li>
     </ul>
   </section>
 </div>
@@ -65,44 +73,48 @@
   <div class="row">
     <div class="col">
       <img src="images/florea-logo.png" />
-      <p>Stále probíhající spolupráce. Pro online květinářství tvořím zábavné i informačně hodnotné články, newslettery, reklamní texty i nabídky na slevové portály.</p>
+      <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
     </div>
     <div class="col">
       <img src="images/proudly-logo.png" />
-      <p>Stále probíhající spolupráce na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+      <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
     </div>
     <div class="col">
       <img src="images/hrady-jicin.png" />
-      <p>Stále probíhající spolupráce na tvorbě obsahu na web a sociální sítě.</p>
+      <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
     </div>
   </div>
   <div class="row">
     <div class="col">
       <img src="images/logo-zoot.png" />
-      <p>Pro ZOOT jsem otextovala více než 3 000 produktů. Každá značka prodávaná na e-shopu měla vlastní styl komunikace se zákazníkem, což bylo třeba při popisování produktů zohlednit.</p>
+      <p>Pro ZOOT jsem otextovala více než
+      <br>3 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
     </div>
     <div class="col">
       <img src="images/logo-fun-frames.png" />
-      <p>Pro e-shop s ručně vyráběnými rámečky jsem napsala veškeré texty na web včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+      <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
     </div>
     <div class="col">
       <img src="images/logo-autofisera.png" />
-      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout textu i celému webu nový život.</p>
+      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
     </div>
   </div>
 </section>
 
 <div class="content-panel">
   <section>
-    <h2>BUDE NÁM TO KLAPAT?</h2>
+    <h1>BUDE NÁM TO KLAPAT?</h1>
     <div class="panels">
       <ul class="flex flex-center">
-        <li class="flex flex-center">Oboustranná důvěra v to děláme</li>
-        <li class="flex flex-center">SEO je pomocník, ne řešení všeho</li>
+        <li class="flex flex-center">Oboustranná důvěra
+        <br>v to, co děláme</li>
+        <li class="flex flex-center">SEO je pomocník, ne superhero</li>
       </ul>
       <ul class="flex flex-center">
-        <li class="flex flex-center">Umět zajít do nekonečna a ještě dál</li>
-        <li class="flex flex-center">Komunikace je klíčem k úspěchu</li>
+        <li class="flex flex-center">Umět zajít do nekonečna
+        <br>a ještě dál</li>
+        <li class="flex flex-center">Komunikace je klíčem
+        <br>k úspěchu</li>
       </ul>
     </div>
   </section>
@@ -113,34 +125,44 @@
       <h2>LIDMILA</h2>
     </div>
     <div>
-    Copywriterka, redaktorka, fotografka. Ke všem třem činnostem jsem přičuchla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nepíšu, cítím nepříjemnou závrať a třas v pravé ruce.
+    Copywriterka, redaktorka, fotografka. Ke všem třem činnostem jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
     </div>
     <div>
-    Nedostatek psaní si kompenzuju závodním hraním bowlingu, cestováním, focením, vařením a chozením po kavárnách nebo vinárnách. Doma na mě čeká kromě přítele-programátora také křeček syrský jménem Benedict.
+    Čas bez psaní zaplňuji trávením času na bowlingové dráze, na cestách, ve fotoateliéru anebo v kavárnách a vinárnách. Život mi dělá pestřejší můj křeček jménem Benedict a partner-programátor (což mluví samo za sebe).
     </div>
   </section>
 
 <div class="content-panel">
   <section id="contact">
     <div class="contacts flex flex-center">
-      <p class="flex">
-        <img src="images/icon-mail.png" />
-        lidmilamarsalkova@gmail.com
-      </p>
-      <p class="flex">
-        <img src="images/icon-phone.png" />
-        739 209 182
-      </p>
       <p>
         <a href="https://www.linkedin.com/in/lmarsalkova" target="_blank" class="flex">
-          <img src="images/icon-linkedin.png" />
-          lmarsalkova
+          <i class="icon-linkedin-rect"></i>
+          #spojmese
         </a>
       </p>
       <p>
         <a href="https://www.facebook.com/copywriterlidmila" target="_blank" class="flex">
-          <img src="images/icon-facebook.png" />
-          copywriterlidmila
+          <i class="icon-facebook-rect"></i>
+          #lajknime
+        </a>
+      </p>
+      <p>
+        <a href="https://twitter.com/Liduskha" target="_blank" class="flex">
+          <i class="icon-twitter-bird"></i>
+          #tweetujmesi
+        </a>
+      </p>
+      <p>
+        <a href="https://www.instagram.com/lidmilka/" target="_blank" class="flex">
+          <i class="icon-instagram-filled"></i>
+          #sledujlidu
+        </a>
+      </p>
+      <p>
+        <a href="http://lidusepise.blogspot.cz/" target="_blank" class="flex">
+          <i class="icon-blogger-rect"></i>
+          #lidusepise
         </a>
       </p>
     </div>
